/*
 * Copyright The Stargate Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_package = "io.stargate.proto";
option go_package = "stargate/proto";

package stargate;

import "query.proto";
import "schema.proto";

// The gPRC API used by Stargate services to interact with the persistence backend.
service StargateBridge {
  // Executes a single CQL query.
  rpc ExecuteQuery(Query) returns (Response) {}

  // Executes a batch of CQL queries.
  rpc ExecuteBatch(Batch) returns (Response) {}

  // Similar to CQL "DESCRIBE KEYSPACE"
  rpc DescribeKeyspace(DescribeKeyspaceQuery) returns (CqlKeyspaceDescribe) {}

  // Similar to CQL "DESCRIBE KEYSPACE"
  rpc DescribeTable(DescribeTableQuery) returns (CqlTable) {}

  // Requests notification of schema changes.
  rpc GetSchemaNotifications(GetSchemaNotificationsParams) returns (stream SchemaNotification) {}
}

